meBS7Xgo created loing endpoint with mock admin user, first backend attempt
